# auto-file-delete

./: CMakeLists.txt  README.md  afd.cpp  afd.hpp  afd_main.cpp  afdd.cpp  afdq.cpp  afdq.hpp  afdq_main.cpp  common.cpp  common.hpp
systemd/: afd.service  afd.timer
tests/: CMakeLists.txt  fuzz_afd.cpp  fuzz_afdq.cpp  test_afd.cpp  test_afdq.cpp
